--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-fastapi
+fastapi[all]
 jinja2==3.0.2
 python-multipart==0.0.5
 pydantic==2.3.0
 pydantic-extra-types==2.2.0
 pydantic-settings==2.1.0
-uvicorn
-gunicorn
+
